// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute forex api should return success 1`] = `
Object {
  "data": Object {
    "result": 0.7536,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 0.7536,
  "statusCode": 200,
}
`;

exports[`execute forex batch api should return success 1`] = `
Object {
  "data": Object {
    "result": 28.5,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 28.5,
  "statusCode": 200,
}
`;

exports[`execute forex batch api should return the proper warning message when the API does not return a response 1`] = `
Object {
  "error": Object {
    "feedID": "USD/GBP",
    "message": "Result could not be found from response.  This is expected for some pairs during the weekend as the market is closed.",
    "name": "AdapterError",
  },
  "jobRunID": "1",
  "status": "errored",
  "statusCode": 502,
}
`;
